--- a/ipa.html
+++ b/ipa.html
@@ -36,7 +36,7 @@
     </tr>
      <tr>
     <td>1</td>
-    <td><a  href="itms-services://?action=download-manifest&url=http://p6li0r9ss.bkt.clouddn.com/manifest.plist">老克家的小草</a></td>
+    <td><a  href="itms-services://?action=download-manifest&url=https://github.com/jianyuHuang/test/blob/master/manifest.plist">老克家的小草</a></td>
     <td>IOS</td>
     </tr>
     <table>
